@@ -7,6 +7,8 @@
  * add ability to return "endpoints" to nodetool (CASSANDRA-2776)
  * Add support for multiple (comma-delimited) coordinator addresses
    to ColumnFamilyInputFormat (CASSANDRA-2807)
+ * fix potential NPE while scheduling read repair for range slice
+   (CASSANDRA-2823)
 
 
 0.8.1
